listen to the new dag block and block from peer in chain state service

--- a/state/service/Cargo.toml
+++ b/state/service/Cargo.toml
@@ -14,6 +14,7 @@ starcoin-types = { workspace = true }
 stest = { workspace = true }
 tokio = { workspace = true }
 starcoin-vm-types = { workspace = true }
+starcoin-dag = { workspace = true }
 
 [dev-dependencies]
 test-helper = { workspace = true }
