--- a/genesis/Cargo.toml
+++ b/genesis/Cargo.toml
@@ -3,12 +3,14 @@ anyhow = { workspace = true }
 bcs-ext = { workspace = true }
 clap = { features = ["derive"], workspace = true }
 include_dir = { workspace = true }
-once_cell = { workspace = true }
 serde = { workspace = true }
+flate2 = "1.0"
+tar = "0.4"
+tempfile = { workspace = true }
+
 starcoin-accumulator = { workspace = true }
 starcoin-chain = { workspace = true }
 starcoin-config = { workspace = true }
-starcoin-consensus = { workspace = true }
 starcoin-crypto = { workspace = true }
 starcoin-executor = { workspace = true }
 starcoin-logger = { workspace = true }
@@ -19,18 +21,13 @@ starcoin-transaction-builder = { workspace = true }
 starcoin-types = { features = ["fuzzing"], workspace = true }
 starcoin-vm-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
-stdlib = { workspace = true }
 stest = { workspace = true }
 thiserror = { workspace = true }
+
 
 # dependencies for move2
 starcoin-vm2-storage = { workspace = true }
 starcoin-vm2-genesis = { workspace = true }
-starcoin-vm2-transaction-builder = { workspace = true }
-starcoin-vm2-vm-types = { workspace = true }
-starcoin-vm2-types = { workspace = true }
-starcoin-vm2-crypto = { workspace = true }
-starcoin-vm2-statedb = { workspace = true }
 
 [dev-dependencies]
 test-helper = { workspace = true }
