--- a/config/example/barnard/genesis_config.json
+++ b/config/example/barnard/genesis_config.json
@@ -371,7 +371,7 @@
     "module_publishing_allowed": false
   },
   "consensus_config": {
-    "uncle_rate_target": 1,
+    "uncle_rate_target": 500,
     "base_block_time_target": 100,
     "base_reward_per_block": 1000000000,
     "base_reward_per_uncle_percent": 10,
@@ -381,7 +381,8 @@
     "max_block_time_target": 2000,
     "base_max_uncles_per_block": 2,
     "base_block_gas_limit": 50000000,
-    "strategy": 3
+    "strategy": 3,
+    "blue_ratio": 1
   },
   "association_key_pair": [
     null,
