--- a/config/example/main/genesis_config.json
+++ b/config/example/main/genesis_config.json
@@ -375,7 +375,7 @@
     "module_publishing_allowed": false
   },
   "consensus_config": {
-    "uncle_rate_target": 1,
+    "uncle_rate_target": 240,
     "base_block_time_target": 100,
     "base_reward_per_block": 10000000000,
     "base_reward_per_uncle_percent": 10,
@@ -385,7 +385,8 @@
     "max_block_time_target": 2000,
     "base_max_uncles_per_block": 2,
     "base_block_gas_limit": 50000000,
-    "strategy": 3
+    "strategy": 3,
+    "blue_ratio": 1
   },
   "association_key_pair": [
     null,
