--- a/config/example/proxima/genesis_config.json
+++ b/config/example/proxima/genesis_config.json
@@ -499,7 +499,7 @@
     "module_publishing_allowed": true
   },
   "consensus_config": {
-    "uncle_rate_target": 1,
+    "uncle_rate_target": 240,
     "base_block_time_target": 100,
     "base_reward_per_block": 10000000000,
     "base_reward_per_uncle_percent": 10,
@@ -509,7 +509,8 @@
     "max_block_time_target": 2000,
     "base_max_uncles_per_block": 2,
     "base_block_gas_limit": 50000000,
-    "strategy": 3
+    "strategy": 3,
+    "blue_ratio": 1
   },
   "association_key_pair": [
     null,
@@ -517,7 +518,7 @@
   ],
   "genesis_key_pair": null,
   "stdlib_version": {
-    "Version": 13
+    "Version": 12
   },
   "dao_config": {
     "voting_delay": 60000,
