--- a/config/example/vega/genesis_config.json
+++ b/config/example/vega/genesis_config.json
@@ -394,7 +394,7 @@
   ],
   "genesis_key_pair": null,
   "stdlib_version": {
-    "Version": 12
+    "Version": "Latest"
   },
   "dao_config": {
     "voting_delay": 3600000,
