--- a/config/example/proxima/genesis_config.json
+++ b/config/example/proxima/genesis_config.json
@@ -518,7 +518,7 @@
   ],
   "genesis_key_pair": null,
   "stdlib_version": {
-    "Version": "Latest"
+    "Version": 13
   },
   "dao_config": {
     "voting_delay": 60000,
