--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -36,6 +36,11 @@ starcoin-vm2-chain = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
 
+log = "0.4.27"
+flate2 = "1.0"
+tar = "0.4"
+tempfile = { workspace = true }
+
 [dev-dependencies]
 proptest = { workspace = true }
 proptest-derive = { workspace = true }
