[migration] 1. fixed all build error; 2. revert genesis build; 3. move migration process from genesis to open block

--- a/chain/open-block/Cargo.toml
+++ b/chain/open-block/Cargo.toml
@@ -17,6 +17,7 @@ starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
 starcoin-force-upgrade = { workspace = true }
+starcoin-data-migration = { workspace = true }
 
 # dependencies for move2
 starcoin-vm2-statedb = { workspace = true }
