--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ members = [
     "contrib-contracts",
     "chain",
     "chain/api",
+    "chain/data-migration",
     "chain/open-block",
     "chain/force-upgrade",
     "chain/mock",
@@ -161,6 +162,7 @@ default-members = [
     "contrib-contracts",
     "chain",
     "chain/api",
+    "chain/data-migration",
     "chain/open-block",
     "chain/force-upgrade",
     "chain/mock",
@@ -477,6 +479,7 @@ starcoin-accumulator = { path = "commons/accumulator", package = "starcoin-accum
 starcoin-block-relayer = { path = "block-relayer" }
 starcoin-chain = { path = "chain" }
 starcoin-chain-api = { path = "chain/api" }
+starcoin-data-migration = { path = "chain/data-migration" }
 starcoin-chain-mock = { path = "chain/mock" }
 starcoin-chain-notify = { path = "chain/chain-notify" }
 starcoin-chain-service = { path = "chain/service" }
