--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -23,6 +23,7 @@ starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
 starcoin-force-upgrade = { workspace = true }
+starcoin-data-migration = { workspace = true }
 starcoin-storage = { workspace = true }
 thiserror = { workspace = true }
 once_cell = { workspace = true }
@@ -36,10 +37,8 @@ starcoin-vm2-chain = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
 
+
 log = "0.4.27"
-flate2 = "1.0"
-tar = "0.4"
-tempfile = { workspace = true }
 
 [dev-dependencies]
 proptest = { workspace = true }
