--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -36,8 +36,6 @@ starcoin-vm2-types = { workspace = true }
 starcoin-vm2-chain = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
-
-
 log = "0.4.27"
 
 [dev-dependencies]
@@ -52,10 +50,12 @@ starcoin-types = { features = [
 ], workspace = true }
 stest = { workspace = true }
 test-helper = { workspace = true }
-starcoin-force-upgrade = { workspace = true }
 starcoin-vm2-test-helper = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
 starcoin-vm2-crypto = { workspace = true }
+tempfile = "3.2.0"
+flate2 = "1.0"
+tar = "0.4"
 
 [features]
 default = []
