--- a/chain/open-block/Cargo.toml
+++ b/chain/open-block/Cargo.toml
@@ -26,6 +26,7 @@ starcoin-vm2-types = { workspace = true }
 starcoin-vm2-executor = { workspace = true }
 starcoin-vm2-crypto = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
+log = "0.4.27"
 
 [dev-dependencies]
 starcoin-genesis = { workspace = true }
