--- a/test-helper/Cargo.toml
+++ b/test-helper/Cargo.toml
@@ -52,6 +52,7 @@ move-ir-compiler = { workspace = true }
 
 # dependencies for move 2.0
 starcoin-vm2-storage = { workspace = true }
+starcoin-vm2-account-service = { workspace = true }
 
 [dev-dependencies]
 stest = { workspace = true }
