--- a/Cargo.toml
+++ b/Cargo.toml
@@ -274,7 +274,7 @@ atomic-counter = "1.0.1"
 atty = "0.2.14"
 backtrace = "0.3"
 base64 = "0.22.1"
-bcs = "0.1"
+bcs = "=0.1.5"
 bcs-ext = { path = "commons/bcs_ext" }
 bech32 = "0.9"
 bencher = "0.1.5"
