--- a/config/example/vega/genesis_config.json
+++ b/config/example/vega/genesis_config.json
@@ -385,7 +385,8 @@
     "max_block_time_target": 2000,
     "base_max_uncles_per_block": 2,
     "base_block_gas_limit": 50000000,
-    "strategy": 1
+    "strategy": 1,
+    "max_transaction_per_block": 50
   },
   "association_key_pair": [
     null,
