--- a/rpc/api/Cargo.toml
+++ b/rpc/api/Cargo.toml
@@ -49,6 +49,7 @@ vm-status-translator = { workspace = true }
 move-core-types = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-types = { workspace = true }
+starcoin-vm2-rpc-api = { workspace = true}
 
 [dev-dependencies]
 test-helper = { workspace = true }
