--- a/vm2/rpc/api/Cargo.toml
+++ b/vm2/rpc/api/Cargo.toml
@@ -26,6 +26,7 @@ openrpc-derive = { workspace = true }
 openrpc-schema = { workspace = true }
 serde = { features = ["derive"], workspace = true }
 serde_json = { features = ["arbitrary_precision"], workspace = true }
+starcoin-types = { workspace = true }
 starcoin-vm2-types = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-abi-decoder = { workspace = true }
