--- a/testsuite/Cargo.toml
+++ b/testsuite/Cargo.toml
@@ -31,10 +31,14 @@ starcoin-rpc-api = { workspace = true }
 starcoin-rpc-server = { workspace = true }
 starcoin-state-api = { workspace = true }
 starcoin-storage = { workspace = true }
-starcoin-txpool = { workspace = true }
-starcoin-types = { workspace = true }
-starcoin-vm-runtime = { workspace = true }
-starcoin-vm-types = { workspace = true }
+
+starcoin-vm2-state-api = { workspace = true }
+starcoin-vm2-transaction-builder = { workspace = true }
+starcoin-vm2-types = { workspace = true }
+starcoin-vm2-account-api = { workspace = true }
+starcoin-vm2-vm-types = { workspace = true }
+
+move-vm2-core-types = { workspace = true }
 
 [dev-dependencies]
 starcoin-transaction-builder = { workspace = true }
