--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -33,6 +33,7 @@ starcoin-sync = { workspace = true }
 starcoin-genesis = { workspace = true }
 crossbeam = { workspace = true }
 rand = { workspace = true }
+starcoin-statedb = { workspace = true }
 
 [dev-dependencies]
 starcoin-network-rpc = { workspace = true }
