--- a/cmd/tx-factory/Cargo.toml
+++ b/cmd/tx-factory/Cargo.toml
@@ -2,6 +2,10 @@
 name = "starcoin_txfactory"
 path = "src/main.rs"
 
+[[bin]]
+name = "starcoin-vm2-txfactory"
+path = "src/vm2_txn.rs"
+
 [dependencies]
 anyhow = { workspace = true }
 clap = { features = ["derive"], workspace = true }
@@ -22,6 +26,7 @@ csv = { workspace = true }
 serde = { workspace = true }
 rand = { workspace = true }
 starcoin-vm2-types = { workspace = true }
+starcoin-vm2-transaction-builder = { workspace = true }
 
 [package]
 authors = { workspace = true }
