--- a/vm2/rpc/api/Cargo.toml
+++ b/vm2/rpc/api/Cargo.toml
@@ -26,6 +26,9 @@ openrpc-derive = { workspace = true }
 openrpc-schema = { workspace = true }
 serde = { features = ["derive"], workspace = true }
 serde_json = { features = ["arbitrary_precision"], workspace = true }
+schemars = { workspace = true }
+
+starcoin-accumulator = { workspace = true}
 starcoin-types = { workspace = true }
 starcoin-vm2-types = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
@@ -33,7 +36,6 @@ starcoin-vm2-abi-decoder = { workspace = true }
 starcoin-vm2-abi-types = { workspace = true }
 starcoin-vm2-account-api = { workspace = true }
 starcoin-vm2-crypto = { workspace = true }
-schemars = { workspace = true }
 
 
 [[bin]]
