Fix chain module compilation issues for dual-VM support
- Update VerifiedBlock structure to support DAG ghostdata
- Add missing DAG-related methods to ChainReader trait
- Fix ExecutedBlock constructor calls with MultiState parameter
- Resolve import conflicts and add missing dependencies
- Add technical debt documentation for VM2 compatibility issues
- Implement placeholder VM2 transaction proof generation
- Fix consensus verification for DAG compatibility

Major changes:
- chain/api: Enhanced ChainReader/ChainWriter traits for dual-VM
- chain/src: Fixed compilation errors while preserving DAG logic
- types: Updated BlockBody.new_v2 for dual-VM transaction handling
- config: Added upgrade_config module from multi-move-vm
- CLAUDE.md: Comprehensive technical debt tracking

--- a/chain/api/Cargo.toml
+++ b/chain/api/Cargo.toml
@@ -1,27 +1,30 @@
 [dependencies]
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+bcs-ext = { workspace = true }
 futures = { workspace = true }
 network-api = { workspace = true }
 rand = { workspace = true }
-rand_core = { default-features = false, workspace = true }
-serde = { features = ["derive"], workspace = true }
+rand_core = { workspace = true }
+serde = { workspace = true }
 starcoin-accumulator = { workspace = true }
 starcoin-crypto = { workspace = true }
 starcoin-service-registry = { workspace = true }
 starcoin-state-api = { workspace = true }
 starcoin-statedb = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-time-service = { workspace = true }
 starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
-starcoin-vm2-vm-types = { workspace = true }
+thiserror = { workspace = true }
+# dag dependencies
+starcoin-dag = { workspace = true }
+starcoin-network-rpc-api = { workspace = true }
+# dependencies for move2
 starcoin-vm2-state-api = { workspace = true }
 starcoin-vm2-statedb = { workspace = true }
-thiserror = { workspace = true }
-starcoin-network-rpc-api = { workspace = true }
-starcoin-config = { workspace = true }
-starcoin-dag = { workspace = true }
-starcoin-storage = { workspace = true }
+starcoin-vm2-types = { workspace = true }
+starcoin-vm2-vm-types = { workspace = true }
 
 [dev-dependencies]
 
