--- a/executor/benchmark/Cargo.toml
+++ b/executor/benchmark/Cargo.toml
@@ -4,7 +4,8 @@ clap = { features = ["derive"], workspace = true }
 itertools = { workspace = true }
 rand = { workspace = true }
 rayon = { workspace = true }
-starcoin-accumulator = { workspace = true }
+num_cpus = { workspace = true }
+starcoin-accumulator = {  workspace = true }
 starcoin-crypto = { workspace = true }
 starcoin-logger = { workspace = true }
 starcoin-config = { workspace = true }
@@ -17,6 +18,8 @@ starcoin-storage = { workspace = true }
 starcoin-types = { workspace = true }
 starcoin-statedb = { workspace = true }
 starcoin-executor = { workspace = true }
+starcoin-vm-runtime = { workspace = true }
+starcoin-metrics = { workspace = true }
 
 [features]
 
