1, use info to print the block process log 2, use dag to select the db state

--- a/txpool/Cargo.toml
+++ b/txpool/Cargo.toml
@@ -30,6 +30,7 @@ trace-time = { workspace = true }
 transaction-pool = { workspace = true }
 proptest = { features = ["std"], optional = true, workspace = true }
 proptest-derive = { optional = true, workspace = true }
+starcoin-dag = { workspace = true }
 
 [dev-dependencies]
 proptest = { workspace = true }
