Fix VM1/VM2 package naming conflicts
- Rename VM1 packages to avoid conflicts:
  - starcoin-types -> starcoin-vm1-types
  - starcoin-vm-types -> starcoin-vm1-vm-types
- Keep VM2 packages with original names for patch mechanism
- Configure workspace with package aliases
- Add patch configuration for VM2 types
- Update VM2 packages to use git dependencies for consistency
- Fix AccumulatorProof conversion in chain-api

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -32,7 +32,7 @@ fuzzing = ["proptest", "proptest-derive", "starcoin-vm-types/fuzzing"]
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-name = "starcoin-types"
+name = "starcoin-vm1-types"
 publish = { workspace = true }
 version = { workspace = true }
 homepage = { workspace = true }
