--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[patch."https://github.com/starcoinorg/starcoin"]
+starcoin-vm-types = { path = "vm2/vm-types" }
+starcoin-types = { path = "vm2/types" }
+
 [workspace]
 resolver = "2"
 members = [
@@ -539,10 +543,10 @@ starcoin-transactional-test-harness = { path = "vm/starcoin-transactional-test-h
 starcoin-txpool = { path = "txpool" }
 starcoin-txpool-api = { path = "txpool/api" }
 starcoin-txpool-mock-service = { path = "txpool/mock-service" }
-starcoin-types = { path = "types" }
+starcoin-types = { path = "types", package = "starcoin-vm1-types" }
 starcoin-uint = { path = "types/uint" }
 starcoin-vm-runtime = { path = "vm/vm-runtime" }
-starcoin-vm-types = { path = "vm/types" }
+starcoin-vm-types = { path = "vm/types", package = "starcoin-vm1-vm-types" }
 stdlib = { path = "vm/stdlib" }
 stest = { path = "commons/stest" }
 stest-macro = { path = "commons/stest/stest-macro" }
@@ -567,8 +571,8 @@ starcoin-vm2-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", 
 starcoin-vm2-dev = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-dev" }
 starcoin-vm2-storage = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-storage" }
 starcoin-vm2-vm-runtime = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-vm-runtime" }
-starcoin-vm2-types = { path = "vm2/types" }
-starcoin-vm2-vm-types = { path = "vm2/vm-types" }
+starcoin-vm2-types = { path = "vm2/types", package = "starcoin-types" }
+starcoin-vm2-vm-types = { path = "vm2/vm-types", package = "starcoin-vm-types" }
 starcoin-vm2-gas-algebra = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-gas-algebra" }
 starcoin-vm2-gas-schedule = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-gas-schedule" }
 starcoin-vm2-gas-meter = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-gas-meter" }
