--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -24,6 +24,7 @@ starcoin-vm-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
 starcoin-force-upgrade = { workspace = true }
 starcoin-storage = { workspace = true }
+starcoin-dag = { workspace = true }
 thiserror = { workspace = true }
 once_cell = { workspace = true }
 serde_json = { features = ["arbitrary_precision"], workspace = true }
