--- a/chain/api/Cargo.toml
+++ b/chain/api/Cargo.toml
@@ -9,6 +9,7 @@ rand_core = { workspace = true }
 serde = { workspace = true }
 starcoin-accumulator = { workspace = true }
 starcoin-crypto = { workspace = true }
+starcoin-dag = { workspace = true }
 starcoin-service-registry = { workspace = true }
 starcoin-state-api = { workspace = true }
 starcoin-statedb = { workspace = true }
