Fix compilation errors after DAG and multi-VM merge
- Update NewHeadBlock/NewDagBlock system events to use named fields
- Add DAG support to miner module without sync dependency
- Fix VM2 Epoch with max_transaction_per_block field
- Unify ConsensusStrategy to use VM2 version for DAG
- Fix AccountAddress type conversions between VM1 and VM2
- Add missing DAG parameters to BlockChain::new calls
- Update mock services with required trait methods
- Add DAG dependencies to relevant modules

--- a/chain/mock/Cargo.toml
+++ b/chain/mock/Cargo.toml
@@ -14,6 +14,7 @@ starcoin-accumulator = { workspace = true }
 starcoin-chain = { workspace = true }
 starcoin-config = { workspace = true }
 starcoin-consensus = { workspace = true }
+starcoin-dag = { workspace = true }
 starcoin-executor = { workspace = true }
 starcoin-genesis = { workspace = true }
 starcoin-open-block = { workspace = true }
