--- a/genesis/Cargo.toml
+++ b/genesis/Cargo.toml
@@ -10,6 +10,7 @@ starcoin-chain = { workspace = true }
 starcoin-config = { workspace = true }
 starcoin-consensus = { workspace = true }
 starcoin-crypto = { workspace = true }
+starcoin-dag = { workspace = true }
 starcoin-executor = { workspace = true }
 starcoin-logger = { workspace = true }
 starcoin-state-api = { workspace = true }
