--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -29,7 +29,6 @@ starcoin-vm-types = { workspace = true }
 tokio = { features = ["full"], workspace = true }
 starcoin-dag = { workspace = true }
 starcoin-types = { workspace = true }
-starcoin-sync = { workspace = true }
 starcoin-genesis = { workspace = true }
 crossbeam = { workspace = true }
 rand = { workspace = true }
@@ -39,6 +38,8 @@ starcoin-statedb = { workspace = true }
 starcoin-vm2-storage = { workspace = true }
 starcoin-vm2-account-service = { workspace = true }
 starcoin-vm2-account-api = { workspace = true }
+starcoin-vm2-types = { workspace = true }
+starcoin-vm2-vm-types = { workspace = true }
 
 [dev-dependencies]
 starcoin-network-rpc = { workspace = true }
