--- a/sync/api/Cargo.toml
+++ b/sync/api/Cargo.toml
@@ -3,7 +3,7 @@ anyhow = { workspace = true }
 async-trait = { workspace = true }
 network-api = { workspace = true }
 schemars = { workspace = true }
-serde = { workspace = true }
+serde = { features = ["derive"], workspace = true }
 starcoin-accumulator = { workspace = true }
 starcoin-crypto = { workspace = true }
 starcoin-logger = { workspace = true }
