--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -53,6 +53,7 @@ starcoin-vm2-state-service = { workspace = true }
 starcoin-vm2-account-service = { workspace = true }
 starcoin-vm2-rpc-server = { workspace = true }
 starcoin-vm2-dev = { workspace = true }
+starcoin-dag = { workspace = true }
 
 [dev-dependencies]
 stest = { workspace = true }
