--- a/test-helper/Cargo.toml
+++ b/test-helper/Cargo.toml
@@ -38,6 +38,7 @@ starcoin-state-api = { workspace = true }
 starcoin-state-service = { workspace = true }
 starcoin-statedb = { workspace = true }
 starcoin-storage = { workspace = true }
+starcoin-dag = { workspace = true }
 starcoin-sync = { workspace = true }
 starcoin-sync-api = { workspace = true }
 starcoin-transaction-builder = { workspace = true }
