Fix: resources finally escape from gitignore
- Remove overly broad 'resources' from .gitignore
- Add VM2 resources files that were silently ignored
Lesson learned: be specific with gitignore patterns!

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 **/target
 /target
 public
-resources
 **/*.rs.bk
 
 # macOS Specific ignores
@@ -47,4 +46,4 @@ build/
 
 # CI experimental mold binary
 mold
-.claude
+.claude/*
