--- a/commons/forkable-jellyfish-merkle/Cargo.toml
+++ b/commons/forkable-jellyfish-merkle/Cargo.toml
@@ -8,7 +8,7 @@ backtrace = { workspace = true }
 bcs-ext = { workspace = true }
 byteorder = { workspace = true }
 hex = { workspace = true }
-
+mirai-annotations = { workspace = true }
 num-derive = { workspace = true }
 num-traits = { workspace = true }
 proptest = { optional = true, workspace = true }
