Fix test compile errors

--- a/txpool/Cargo.toml
+++ b/txpool/Cargo.toml
@@ -50,6 +50,7 @@ stdlib = { workspace = true }
 tempfile = { workspace = true }
 test-helper = { workspace = true }
 starcoin-chain = { workspace = true }
+starcoin-dag = { workspace = true }
 
 [features]
 default = []
