--- a/rpc/server/Cargo.toml
+++ b/rpc/server/Cargo.toml
@@ -80,6 +80,7 @@ starcoin-vm2-vm-types = { workspace = true }
 
 [dev-dependencies]
 starcoin-chain-mock = { workspace = true }
+starcoin-dag = { workspace = true }
 starcoin-executor = { workspace = true }
 starcoin-genesis = { workspace = true }
 starcoin-rpc-client = { workspace = true }
