--- a/Cargo.toml
+++ b/Cargo.toml
@@ -617,6 +617,7 @@ walkdir = "2.3.1"
 wasm-timer = "0.2"
 which = "4.1.0"
 zeroize = "1.3.0"
+pprof = { version = "0.15.0", features = ["flamegraph"] }
 
 [profile.release.package]
 starcoin-service-registry.debug = 1
