--- a/rpc/server/Cargo.toml
+++ b/rpc/server/Cargo.toml
@@ -67,6 +67,7 @@ starcoin-vm-types = { workspace = true }
 thiserror = { workspace = true }
 vm-status-translator = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
+pprof = { workspace = true }
 
 # dependencies for Move 2.0
 starcoin-vm2-abi-decoder = { workspace = true }
