--- a/Cargo.toml
+++ b/Cargo.toml
@@ -558,26 +558,26 @@ starcoin-vm2-rpc-api = { path = "vm2/rpc/api" }
 starcoin-vm2-rpc-server = { path = "vm2/rpc/server" }
 
 starcoin-vm2-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588", package = "starcoin-crypto" }
-starcoin-vm2-dev = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-dev" }
-starcoin-vm2-storage = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-storage" }
-starcoin-vm2-vm-runtime = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-vm-runtime" }
-starcoin-vm2-types = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-types" }
-starcoin-vm2-vm-types = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-vm-types" }
-starcoin-vm2-statedb = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-statedb" }
-starcoin-vm2-state-api = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-state-api" }
-starcoin-vm2-state-tree = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-state-tree" }
-starcoin-vm2-framework = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-framework" }
-starcoin-vm2-transaction-builder = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-transaction-builder" }
-starcoin-vm2-move-compiler = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-move-compiler" }
-starcoin-vm2-abi-decoder = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-abi-decoder" }
-starcoin-vm2-abi-resolver = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-abi-resolver" }
-starcoin-vm2-abi-types = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-abi-types" }
-starcoin-vm2-account = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-account" }
-starcoin-vm2-account-api = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-account-api" }
-starcoin-vm2-account-provider = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-account-provider" }
-starcoin-vm2-resource-viewer = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-resource-viewer" }
-starcoin-vm2-status-translator = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "vm-status-translator" }
-starcoin-vm2-cached-packages = { git = "https://github.com/starcoinorg/starcoin", rev = "a1e2ecd2ce9509fdf913d5dda8a0c43cfd43a5ea", package = "starcoin-cached-packages" }
+starcoin-vm2-dev = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-dev" }
+starcoin-vm2-storage = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-storage" }
+starcoin-vm2-vm-runtime = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-vm-runtime" }
+starcoin-vm2-types = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-types" }
+starcoin-vm2-vm-types = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-vm-types" }
+starcoin-vm2-statedb = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-statedb" }
+starcoin-vm2-state-api = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-state-api" }
+starcoin-vm2-state-tree = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-state-tree" }
+starcoin-vm2-framework = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-framework" }
+starcoin-vm2-transaction-builder = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-transaction-builder" }
+starcoin-vm2-move-compiler = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-move-compiler" }
+starcoin-vm2-abi-decoder = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-abi-decoder" }
+starcoin-vm2-abi-resolver = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-abi-resolver" }
+starcoin-vm2-abi-types = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-abi-types" }
+starcoin-vm2-account = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-account" }
+starcoin-vm2-account-api = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-account-api" }
+starcoin-vm2-account-provider = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-account-provider" }
+starcoin-vm2-resource-viewer = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-resource-viewer" }
+starcoin-vm2-status-translator = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "vm-status-translator" }
+starcoin-vm2-cached-packages = { git = "https://github.com/starcoinorg/starcoin", branch = "remove_transactionfee", package = "starcoin-cached-packages" }
 
 move-vm2-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", package = "move-core-types" }
 move-vm2-transactional-test-runner = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", package = "move-transactional-test-runner" }
