--- a/executor/benchmark/Cargo.toml
+++ b/executor/benchmark/Cargo.toml
@@ -20,6 +20,13 @@ starcoin-statedb = { workspace = true }
 starcoin-executor = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
 starcoin-metrics = { workspace = true }
+starcoin-vm2-types = { workspace = true }
+starcoin-vm2-crypto = { workspace = true }
+starcoin-vm2-transaction-builder = { workspace = true }
+starcoin-vm2-test-helper = { workspace = true }
+starcoin-vm2-executor = { workspace = true }
+starcoin-vm2-statedb = { workspace = true }
+starcoin-vm2-genesis = { workspace = true }
 
 [features]
 
