--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -20,7 +20,7 @@ starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 thiserror = { workspace = true }
-
+starcoin-dag = { workspace = true}
 [dev-dependencies]
 proptest = { workspace = true }
 proptest-derive = { workspace = true }
