--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: run cargo check
         uses: actions-rs/cargo@v1
         env:
-          RUSTFLAGS:  -Aclippy::doc_lazy_continuation -D warnings
+          RUSTFLAGS: -D warnings
         with:
           command: clippy
           args: --all-targets
