--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ members = [
     "vm/compiler",
     "vm/move-prover",
     "commons/mvhashmap",
-    "vm/parallel-executor",
+    "commons/parallel-executor",
     "vm/transaction-builder",
     "vm/transaction-builder-generator",
     "vm/move-coverage",
@@ -89,7 +89,7 @@ members = [
     "vm/move-package-manager",
     "vm/vm-status-translator",
     "vm/starcoin-transactional-test-harness",
-    "vm/parallel-executor",
+    "commons/parallel-executor",
     "vm/transaction-benchmarks",
     "vm/e2e-tests",
     "vm/proptest-helpers",
@@ -206,7 +206,7 @@ default-members = [
     "vm/compiler",
     "vm/move-prover",
     "commons/mvhashmap",
-    "vm/parallel-executor",
+    "commons/parallel-executor",
     "vm/transaction-builder",
     "vm/transaction-builder-generator",
     "vm/move-coverage",
@@ -576,7 +576,7 @@ stest-macro = { path = "commons/stest/stest-macro" }
 stream-task = { path = "commons/stream-task" }
 starcoin-mvhashmap = { path = "commons/mvhashmap" }
 starcoin-infallible = { path = "commons/infallible" }
-starcoin-parallel-executor = { path = "vm/parallel-executor" }
+starcoin-parallel-executor = { path = "commons/parallel-executor" }
 starcoin-transaction-benchmarks = { path = "vm/transaction-benchmarks" }
 starcoin-language-e2e-tests = { path = "vm/e2e-tests" }
 starcoin-proptest-helpers = { path = "vm/proptest-helpers" }
