--- a/kube/manifest/service-main-do.yaml
+++ b/kube/manifest/service-main-do.yaml
@@ -6,20 +6,31 @@ metadata:
     prometheus.io/scrape: 'true'
     prometheus.io/port: '9101'
     prometheus.io/path: '/metrics'
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "tcp"
+    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
   name: starcoin-svc
   namespace: starcoin-main
 spec:
   selector:
     app: starcoin
+    network: main
   ports:
     - protocol: TCP
       port: 80
       targetPort: 9850
       name: http-rpc-80
     - protocol: TCP
+      port: 9840
+      targetPort: 9840
+      name: node
+    - protocol: TCP
       port: 9850
       targetPort: 9850
       name: http-rpc
+    - protocol: TCP
+      port: 9860
+      targetPort: 9860
+      name: tcp-rpc
     - protocol: TCP
       port: 9870
       targetPort: 9870
@@ -28,124 +39,4 @@ spec:
       name: metrics
       protocol: TCP
       targetPort: 9101
-  type: LoadBalancer
----
-apiVersion: v1
-kind: Service
-metadata:
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
-    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
-  labels:
-    app: starcoin
-    network: main
-    statefulset.kubernetes.io/pod-name: starcoin-0
-  name: starcoin-0
-  namespace: starcoin-main
-spec:
-  ports:
-    - port: 9840
-      name: node
-      protocol: TCP
-      targetPort: 9840
-    - port: 9850
-      name: http-rpc
-      protocol: TCP
-      targetPort: 9850
-    - port: 9860
-      name: tcp-rpc
-      protocol: TCP
-      targetPort: 9860
-    - port: 9870
-      name: ws-rpc
-      protocol: TCP
-      targetPort: 9870
-    - port: 9101
-      name: metrics
-      protocol: TCP
-      targetPort: 9101
-  selector:
-    app: starcoin
-    network: main
-    statefulset.kubernetes.io/pod-name: starcoin-0
-  type: LoadBalancer
----
-apiVersion: v1
-kind: Service
-metadata:
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
-    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
-  labels:
-    app: starcoin
-    network: main
-    statefulset.kubernetes.io/pod-name: starcoin-1
-  name: starcoin-1
-  namespace: starcoin-main
-spec:
-  ports:
-    - port: 9840
-      name: node
-      protocol: TCP
-      targetPort: 9840
-    - port: 9850
-      name: http-rpc
-      protocol: TCP
-      targetPort: 9850
-    - port: 9860
-      name: tcp-rpc
-      protocol: TCP
-      targetPort: 9860
-    - port: 9870
-      name: ws-rpc
-      protocol: TCP
-      targetPort: 9870
-    - port: 9101
-      name: metrics
-      protocol: TCP
-      targetPort: 9101
-  selector:
-    app: starcoin
-    network: main
-    statefulset.kubernetes.io/pod-name: starcoin-1
-  type: LoadBalancer
----
-apiVersion: v1
-kind: Service
-metadata:
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
-    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
-  labels:
-    app: starcoin
-    network: main
-    statefulset.kubernetes.io/pod-name: starcoin-2
-  name: starcoin-2
-  namespace: starcoin-main
-spec:
-  ports:
-    - port: 9840
-      name: node
-      protocol: TCP
-      targetPort: 9840
-    - port: 9850
-      name: http-rpc
-      protocol: TCP
-      targetPort: 9850
-    - port: 9860
-      name: tcp-rpc
-      protocol: TCP
-      targetPort: 9860
-    - port: 9870
-      name: ws-rpc
-      protocol: TCP
-      targetPort: 9870
-    - port: 9101
-      name: metrics
-      protocol: TCP
-      targetPort: 9101
-  selector:
-    app: starcoin
-    network: main
-    statefulset.kubernetes.io/pod-name: starcoin-2
   type: LoadBalancer
